Fixed Z-index of form

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,6 +38,7 @@ a {
 .input {
   height: 2vh;
   width: 35vw;
+  z-index: 25;
 }
 
 .craftercontainer {
@@ -484,7 +485,14 @@ form {
 
 }
 
-
+.hidden {
+  grid-column-start: 2;
+  grid-row-start: 2;
+  font-size: 10vh;
+  justify-self: center;
+  opacity: 0.0;
+  text-align: center;
+}
 
 
 
